# zombie-game

./: Cargo.toml  README.md
src/: animals.rs  components.rs  construct.rs  entities.rs  environment.rs  events.rs  fence.rs  inventory.rs  main.rs  main_menu.rs  physics.rs  player.rs  resources.rs  tripmine.rs  turret.rs  utils.rs  wall.rs  weapons.rs  wheat.rs  windmill.rs  woodfence.rs  zombie.rs
src/blocks/: chest.rs  construct.rs  craftingtable.rs  fence.rs  miningrig.rs  mod.rs  tripmine.rs  turret.rs  wall.rs  wheat.rs  windmill.rs  woodfence.rs
src/entities/: animals.rs  entities.rs  mod.rs  weapons.rs  zombie.rs
src/gameui/: main_menu.rs  mod.rs
src/player/: mod.rs  player.rs
src/systems/: environment.rs  interaction.rs  inventory.rs  mod.rs  physics.rs
